--- a/index.html
+++ b/index.html
@@ -243,14 +243,27 @@
                     // 检查 Config 完整性，如果不完整则直接获取 config.json
                     // API 返回的 config 有时会缺失 num_hidden_layers 等关键字段 (例如 Qwen 系列)
                     if (!config || !config.num_hidden_layers || !config.hidden_size) {
+                        let configErr = null;
                         try {
                             const configResponse = await fetch(`https://huggingface.co/${modelId.value}/resolve/main/config.json`, { headers });
                             if (configResponse.ok) {
                                 const fullConfig = await configResponse.json();
                                 config = { ...config, ...fullConfig };
+                            } else {
+                                if (configResponse.status === 401 || configResponse.status === 403) {
+                                    configErr = '权限不足：无法读取配置文件 (401/403)。请检查 Token 权限或是否已签署模型协议。';
+                                } else {
+                                    configErr = `无法读取配置文件 (Status ${configResponse.status})`;
+                                }
                             }
                         } catch (e) {
-                            console.warn('Fetching config.json failed, falling back to API data');
+                            console.warn('Fetching config.json failed', e);
+                            configErr = '读取配置文件失败 (网络错误或跨域限制)';
+                        }
+
+                        // 如果仍然缺少关键字段，抛出具体错误
+                        if (!config || !config.num_hidden_layers || !config.hidden_size) {
+                             throw new Error(configErr || '模型配置文件不完整 (缺失 layers/hidden_size)，且无法通过 API 获取。');
                         }
                     }
 
