--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                             <option value="int8">Int8 / FP8</option>
                             <option value="int4">Int4</option>
                         </select>
+                        <p class="text-xs text-orange-500 mt-1"><i class="fas fa-exclamation-triangle"></i> 量化 KV Cache 可能导致性能下降，一般不推荐。</p>
                     </div>
                 </div>
 
