--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <!-- 标题区 -->
     <div class="text-center mb-10">
-        <h1 class="text-4xl font-bold text-gray-900 mb-2">🚀 大模型显存计算器</h1>
+        <h1 class="text-4xl font-bold text-gray-900 mb-2"><img src="https://pic.nanyuwill.com/PicGo/logo.jpeg" alt="Logo" style="height: 1em; width: 1em; display: inline-block; vertical-align: middle;"> 大模型显存计算器</h1>
         <p class="text-gray-500">输入 HuggingFace 模型 ID，一键计算本地部署所需显存</p>
     </div>
 
