--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     createApp({
         setup() {
-            const modelId = ref('Qwen/Qwen2.5-7B-Instruct'); // 改为非门控模型作为默认
+            const modelId = ref('deepseek-ai/DeepSeek-R1'); // 改为非门控模型作为默认
             const hfToken = ref(''); // 新增 Token 存储
             const loading = ref(false);
             const error = ref(null);
