--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <span class="cursor-pointer hover:text-blue-600 underline" @click="setModel('meta-llama/Llama-4-Scout-17B-16E-Instruct')">Llama-4-Scout-17B (需Token)</span>
                 <span class="cursor-pointer hover:text-blue-600 underline" @click="setModel('deepseek-ai/DeepSeek-OCR')">DeepSeek-OCR</span>
                 <span class="cursor-pointer hover:text-blue-600 underline" @click="setModel('deepseek-ai/DeepSeek-V3.1-Base')">DeepSeek-V3.1-Base</span>
+                <span class="cursor-pointer hover:text-blue-600 underline" @click="setModel('Tongyi-MAI/Z-Image-Turbo')">Z-Image-Turbo</span>
             </div>
 
             <!-- Token 输入 -->
